--- a/assignment.html
+++ b/assignment.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
-    <!-- <script src="https://kit.fontawesome.com/5af1f35cd8.js" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/5af1f35cd8.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,17 +32,37 @@
 
     </header>
     <main>
-        <section class="top-part">
-         <div class="menu-1">   
-        <h1>Start your Journey as <br>
-            Influencer</h1>
-        </div>
-        <div class="menu-2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-        </div>
-        <div class="button">    
-            <a href="">Preebook now</a>
-        </div>
+
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1>Start your Journey as
+                        Influencer
+                    </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
+                        vestibulum sed scelerisque eros.
+                        Lectus faucibus.
+                    </p>
+                    <button>Prebook Now
+                        <i class="fa-solid fa-arrow-right"></i>  
+                    </button>
+                </div>
+                <div class="banner-img">
+                    <img src="./influencer-gear-main/images/main-camera.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="logos-container">
+            <div class="logos-menu">
+            <img src="influencer-gear-main/logos/Alibaba.svg" alt="">
+            <img src="influencer-gear-main/logos/Amazon.svg" alt="">
+            <img src="influencer-gear-main/logos/Daraz.pk Logo.svg" alt="">
+            <img src="influencer-gear-main/logos/Ebay.svg" alt="">
+            <img src="influencer-gear-main/logos/Rakuten.svg" alt="">
+            <img src="influencer-gear-main/logos/Target.svg" alt="">
+            <img src="influencer-gear-main/logos/Walmart.svg" alt="">
+            </div>
+
         </section>
     </main>
 
